[package]
name = "btf2llvm"
version = "0.1.0"
edition = "2021"
[dependencies]
nom = "7.1.3"
inkwell = { version = "0.5", features = ["llvm14-0-force-dynamic"]} #no-llvm-linking"] }
cxx = { version = "1.0.124", features = ["c++20"] }
anyhow = "1.0.86"

[build-dependencies]
cxx-build = "1.0.124"

[profile.release]
lto = "fat"
panic = "abort"

[lib]
name = "btf2llvm"
crate-type = ["staticlib"]
